# CS556

./: README.md  devenv.nix  hello.py  pyproject.toml
HW Template/: Rizzo_John_HW_1.tex
HW1/: CS556B_Homework1_Questions.tex
HW2/: Rizzo_John_CS556-C_HW2.tex  Rizzo_John_pca.ipynb  V_transpose_new.npy
HW_Template/: Rizzo_John_HW_1.tex  Rizzo_John_HW_2.tex  Rizzo_John_HW_3.tex
Lessons/: Framingham_LogReg.ipynb  Gradient Descent-Implementation_Question-Original.ipynb  Week9_Gradient Descent-Implementation_Question.ipynb
Rizzo_John_CS556_HW2/: Rizzo_John_CS556-C_HW2.tex  Rizzo_John_svd.ipynb
Rizzo_John_CS556_HW3/: HW3_Questions_and_Solutions.docx  Homework 3.docx
Rizzo_John_CS556_HW3/Q1/: Q1.ipynb  housingmod.csv
Rizzo_John_CS556_HW3/Q2/: Q2.ipynb
Rizzo_John_CS556_HW3/Q3/: Q3.ipynb
