[project]
name = "cs556"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "imblearn>=0.0",
    "jupyterlab>=4.3.6",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow-metal>=1.2.0",
    "tensorflow>=2.19.0",
]
